# Plaza

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Modules.json  README.md  gen_pdbs_debug.cmd  gen_pdbs_relwithdebinfo.cmd  run_testgame.cmd
Animation/: Animation.cpp  Animation.def  Animation.h  AnimationModule.cpp  AnimationModule.h  AnimationPlayer.cpp  AnimationPlayer.h  AnimationSet.cpp  AnimationSet.h  Animator.cpp  Animator.h  CMakeLists.txt  Transition.cpp  Transition.h
Bgfx/: BgfxBinaryShader.cpp  BgfxCommandList.cpp  BgfxCommandList.h  BgfxContext.cpp  BgfxContext.h  BgfxIndexBuffer.cpp  BgfxModule.cpp  BgfxModule.h  BgfxProgram.cpp  BgfxProgram.h  BgfxShaderCompiler.cpp  BgfxShaderCompiler.h  BgfxTexture2D.cpp  BgfxVertexBuffer.cpp  CMakeLists.txt  shaderc.cpp  shaderc.h
BgfxRendering/: BgfxBinaryShader.cpp  BgfxBinaryShader.h  BgfxCommandList.cpp  BgfxCommandList.h  BgfxContext.cpp  BgfxContext.h  BgfxIndexBuffer.cpp  BgfxIndexBuffer.h  BgfxMesh.cpp  BgfxMesh.h  BgfxModule.cpp  BgfxModule.h  BgfxOffscreenRenderTarget.cpp  BgfxOffscreenRenderTarget.h  BgfxProgram.cpp  BgfxProgram.h  BgfxRenderContext.cpp  BgfxRenderContext.h  BgfxRendering.def  BgfxResource.cpp  BgfxResource.h  BgfxShaderCache.cpp  BgfxShaderCache.h  BgfxShaderCompiler.cpp  BgfxShaderCompiler.h  BgfxTexture2D.cpp  BgfxTexture2D.h  BgfxTextureReadBack.cpp  BgfxTextureReadBack.h  BgfxUniform.cpp  BgfxUniform.h  BgfxVertexBuffer.cpp  BgfxVertexBuffer.h  BgfxVertexDeclaration.cpp  BgfxVertexDeclaration.h  CMakeLists.txt  shaderc.h
Collision/: CMakeLists.txt  Collision.def  CollisionModule.cpp  CollisionModule.h
Core/: Algorithms.h  AlignedAllocator.h  Base64.cpp  Base64.h  Binding.cpp  Binding.h  CMakeLists.txt  Component.cpp  Component.h  Core.def  CoreModule.cpp  CoreModule.h  Date.cpp  Date.h  Debug.cpp  Debug.h  Delegate.h  Dictionary.cpp  Dictionary.h  Entity.cpp  Entity.h  EntityPrinter.py  Enum.cpp  Enum.h  Event.cpp  Event.h  Function.cpp  Function.h  FunctionCommonSignatures.cpp  FunctionCommonSignatures.h  Handle.cpp  Handle.h  Hashing.cpp  Hashing.h  Hierarchy.cpp  Hierarchy.h  Identification.cpp  Identification.h  Instance.cpp  Instance.h  (+36 more)
DataModel/: CMakeLists.txt  ComponentModel.h  CppPersistance.cpp  CppPersistance.h  DataModelModule.cpp  DataModelModule.h  EnumDefinition.cpp  EnumDefinition.h  ModelDependency.h  ModuleDefinition.cpp  ModuleDefinition.h  PropertyModel.h  ServiceDefinition.cpp  ServiceDefinition.h  ServiceSubscriptionDefinition.cpp  ServiceSubscriptionDefinition.h
Debug/: CMakeLists.txt  Debug.def  Debug.json  DebugModule.cpp  DebugModule.h  Debugger.cpp  EntityTracker.cpp  EntityTracker.h  FlowNode.cpp  FlowNode.h  ModuleProfiling.cpp  ModuleProfiling.h  Test.json
Editor/: CMakeLists.txt  CodeEditor.cpp  CodeEditor.h  Editor.cap  Editor.cpp  Editor.def  Editor.h  Editor.http  Editor.json  EditorContext.cpp  EditorContext.h  EditorModule.cpp  EditorModule.h  EditorSettings.cpp  EditorSettings.h  EditorStandardCommands.cpp  EditorStandardCommands.h  EditorStyle.cpp  EditorStyle.h  EditorView.cpp  EditorView.h  EntityExplorer.cpp  EntityExplorer.h  FileEditor.cpp  FileEditor.h  FileExplorer.cpp  LuaEditor.cpp  LuaEditor.h  MainMenu.cpp  MainMenu.h  MenuItem.cpp  MenuItem.h  Project.cpp  Project.h  ProjectReference.cpp  ProjectReference.h  PropertyEditor.cpp  PropertyEditor.h  Selection.cpp  Selection.h
Excel/: CMakeLists.txt  ExcelLoader.cpp  ExcelLoader.h
File/: CMakeLists.txt  File.def  FileModule.cpp  FileModule.h  FileStream.cpp  FileStream.h  Folder.cpp  Folder.h
Foundation/: AppLoop.cpp  AppLoop.h  AppNode.cpp  AppNode.h  BasicValueConverters.cpp  BasicValueConverters.h  CMakeLists.txt  CommandLine.cpp  CommandLine.h  Constant.cpp  Constant.h  DllPersistance.cpp  DllPersistance.h  ForEach.cpp  ForEach.h  Foundation.def  FoundationModule.cpp  FoundationModule.h  Invalidation.cpp  Invalidation.h  Invocation.cpp  Invocation.h  Logical.cpp  Logical.h  MathOperation.cpp  MathOperation.h  MemoryStream.cpp  MemoryStream.h  NativeUtils.h  Persistance.cpp  Persistance.h  PersistancePoint.cpp  PersistancePoint.h  PropertyBinding.cpp  PropertyBinding.h  SerializationSettings.cpp  SerializationSettings.h  StdStream.cpp  StdStream.h  StopWatch.cpp  (+19 more)
GUI/: Button.cpp  Button.h  CMakeLists.txt  DragHandle.cpp  DragHandle.h  Font.cpp  Font.h  FontProgram.ps  FontProgram.var  FontProgram.vs  Gui.def  Gui.json  GuiCamera.cpp  GuiCamera.h  GuiController.cpp  GuiController.h  GuiModule.cpp  GuiModule.h  GuiPickRay.cpp  GuiPickRay.h  GuiProgram.ps  GuiProgram.var  GuiProgram.vs  Layout.cpp  Layout.h  TextWidget.cpp  TextWidget.h  Widget.cpp  Widget.h
GameApp/: CMakeLists.txt  GameApp.def  GameAppModule.cpp  GameAppModule.h
ImGui/: CMakeLists.txt  ImGuiControls.cpp  ImGuiControls.h  ImGuiModule.cpp  ImGuiModule.h  ImGuiRenderer.cpp  ImGuiRenderer.h
Ini/: CMakeLists.txt  Ini.def  IniModule.cpp  IniModule.h  IniPersistance.cpp  IniPersistance.h
Input/: CMakeLists.txt  InputContext.cpp  InputContext.h  InputModule.cpp  InputModule.h  InputState.cpp  InputState.h  Key.cpp  Key.h
JavaScript/: CMakeLists.txt  JavaScript.cpp  JavaScript.h  JavaScriptContext.cpp  JavaScriptContext.h  JavaScriptModule.cpp  JavaScriptModule.h  JavaScriptPersistance.cpp  JavaScriptPersistance.h
Logic/: CMakeLists.txt  ConditionalState.cpp  ConditionalState.h  InvertState.cpp  InvertState.h  LogicModule.cpp  LogicModule.h  MultiState.cpp  MultiState.h  PropertyBinding.cpp  PropertyBinding.h  PropertyState.cpp  PropertyState.h  State.cpp  State.h  StateBinding.cpp  StateBinding.h  ToggleState.cpp  ToggleState.h
Lua/: CMakeLists.txt  LuaBinding.cpp  LuaBinding.h  LuaInterop.cpp  LuaInterop.h  LuaModule.cpp  LuaModule.h  LuaScript.cpp  LuaScript.h
Networking/: CMakeLists.txt  HttpRequest.cpp  HttpRequest.h  HttpServer.cpp  HttpServer.h  Networking.def  NetworkingModule.cpp  NetworkingModule.h  NetworkingModule.json  Replication.cpp  Replication.h  Server.cpp  Server.h  TcpStream.cpp  TcpStream.h
Player/: CMakeLists.txt  PlayerContext.cpp  PlayerContext.h  (+2 more)
(+635 files in other folders)
